# muehle-boardgame-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: README.md  partie1.txt
include/: AiPlayer.h  Board.h  CommandLine.h  ConsoleRenderer.h  EventLog.h  Game.h  InputParser.h  Move.h  MoveLogger.h  MoveTimer.h  Player.h  Statistics.h  Types.h
src/: AiPlayer.cpp  Board.cpp  CommandLine.cpp  ConsoleRenderer.cpp  EventLog.cpp  Game.cpp  InputParser.cpp  MoveLogger.cpp  MoveTimer.cpp  Player.cpp  Statistics.cpp  main.cpp
tests/: test_framework.h  test_main.cpp
